# ncytm

./: CHANGELOG.md  Cargo.toml  IMPLEMENTATION_PLAN.md  README.md
.github/workflows/: cd.yml  ci.yml
.opencode/: skill.md
doc/: developers.md  package_maintainers.md  resource_footprint.md  users.md
misc/: ncytm.desktop
src/: application.rs  authentication.rs  browser_auth.rs  cli.rs  command.rs  commands.rs  config.rs  events.rs  ext_traits.rs  ipc.rs  lib.rs  library.rs  macos_event_loop.rs  main.rs  media_control.rs  mpris.rs  panic.rs  player.rs  player_worker.rs  queue.rs  spotify.rs  spotify_api.rs  spotify_worker.rs  utils.rs  youtube.rs  youtube_url.rs
src/model/: album.rs  artist.rs  category.rs  episode.rs  mod.rs  playable.rs  playlist.rs  show.rs  track.rs
src/ui/: artist.rs  browse.rs  contextmenu.rs  help.rs  library.rs  listview.rs  mod.rs  playlist.rs  search.rs  search_results.rs  show.rs  statusbar.rs
src/youtube_music/: auth.rs  client.rs  cookies.rs  mod.rs  stream.rs
src/youtube_music/api/: album.rs  artist.rs  browse.rs  library.rs  mod.rs  playlist.rs  radio.rs  search.rs
xtask/: Cargo.toml
xtask/src/: main.rs
