[package]
name = "ncytm"
readme = "README.md"
version = "0.1.0"
description = "ncurses YouTube Music client written in Rust, inspired by ncmpc and the likes. Fork of ncspot."
exclude = ["images/**"]
keywords = ["youtube-music", "ncurses", "terminal", "music"]
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[badges]
maintenance = {status = "experimental"}

[workspace]
members = [
    ".",
    "xtask"
]

[workspace.package]
authors = ["ncytm contributors"]
edition = "2024"
license = "BSD-2-Clause"
repository = "https://github.com/anomalyco/ncytm"

[workspace.lints.clippy]
enum_glob_use = "warn"
use_self = "deny"
multiple_inherent_impl = "deny"

[lints]
workspace = true

[profile.release]
lto = true
codegen-units = 1

[profile.optimized]
inherits = "release"
lto = false
codegen-units = 16

[dependencies]
chrono = {version = "0.4", features = ["serde"]}
clap = "4.6.0"
arboard = {version = "3.6", optional = true}
crossbeam-channel = "0.5"
zbus = {version = "5.14.0", default-features = false, features = ["tokio"], optional = true}
fern = "0.7"
futures = "0.3"
ioctl-rs = {version = "0.2", optional = true}
libc = "0.2.183"
log = "0.4.29"
pancurses = {version = "0.17.0", optional = true}
parse_duration = "2.1.1"
platform-dirs = "0.3.0"
rand = "0.10"
regex = "1"
reqwest = {version = "0.12", default-features = false, features = ["json", "cookies", "rustls-tls", "blocking"]}
serde = {version = "1.0", features = ["derive"]}
serde_cbor = "0.11.2"
serde_json = "1.0"
sha1 = "0.10"
strum = "0.28"
strum_macros = "0.28"
thiserror = "2.0"
tokio = {version = "1", features = ["rt-multi-thread", "sync", "time", "net", "macros"]}
tokio-util = {version = "0.7.18", features = ["codec"]}
tokio-stream = {version = "0.1.18", features = ["sync"]}
toml = "1.0"
unicode-width = "0.2.2"
url = "2.5"

[target.'cfg(unix)'.dependencies]
signal-hook = "0.4.3"

[dependencies.cursive]
default-features = false
version = "0.21.1"

[dependencies.notify-rust]
default-features = false
version = "4"
# Use zbus, which we already depend on, instead of dbus.
features = ["z"]
optional = true

[features]
cover = ["ioctl-rs"] # Support displaying the album cover
default = ["share_clipboard", "mpris", "notify", "crossterm_backend"]
mpris = ["zbus"] # Allow ncytm to be controlled via MPRIS API
ncurses_backend = ["cursive/ncurses-backend"]
notify = ["notify-rust"] # Show what's playing via a notification
crossterm_backend = ["cursive/crossterm-backend"]
pancurses_backend = ["cursive/pancurses-backend", "pancurses/win32"]
share_clipboard = ["arboard", "arboard/wayland-data-control"] # Share a link to the system clipboard
share_selection = ["arboard", "arboard/wayland-data-control"] # Use the primary selection for sharing - linux and bsd only
termion_backend = ["cursive/termion-backend"]

[package.metadata.deb]
assets = [
  ["target/release/ncytm", "usr/bin/", "755"],
  ["misc/ncytm.desktop", "usr/share/applications/", "644"],
  ["images/logo.svg", "usr/share/icons/hicolor/scalable/apps/ncytm.svg", "644"],
  ["README.md", "usr/share/doc/ncytm/README.md", "644"],
]
depends = "$auto"
extended-description = """\
ncurses YouTube Music client written in Rust. \
Fork of ncspot, heavily inspired by ncurses MPD clients, such as ncmpc."""
license-file = ["LICENSE"]
priority = "optional"
section = "sound"
